--- a/.gitignore
+++ b/.gitignore
@@ -142,8 +142,18 @@ cython_debug/
 Overall/train-test-data/
 .idea
 */logs
-Synthetic/csvdata_sql/*
-Synthetic_distributed/nodes/
 Overall/deepdb/deepdb-imdb/imdb-benchmark/
+Overall/deepdb/deepdb-forest_power/imdb-benchmark
+Overall/naru/models
 Overall_distributed/save/
-Synthetic/sql_truecard
+Overall_distributed/data/
+Overall_distributed/naru/*.txt
+Overall_distributed/naru/*.csv
+Overall_distributed/deepdb/*.txt
+Overall_distributed/deepdb/*.csv
+Overall_distributed/deepdb/*.pkl
+Overall_distributed/naru/models
+Synthetic/sql_truecard/
+Synthetic/csvdata_sql/*
+Synthetic/deepdb/imdb-benchmark/*
+Synthetic_distributed/nodes/
